Remove server side price filter, and add free to play and ge-price filters. Removes google analytics completely

--- a/data/config.json
+++ b/data/config.json
@@ -7,6 +7,7 @@
             "volumes": "/volumes"
         }
     },
+    "ge_prices": "https://chisel.weirdgloop.org/gazproj/gazbot/os_dump.json",
     "refresh_rate": 60,
 
     "inactive_threshold": 1,
